<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_light"
        tools:context=".LoginActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fcm"
            android:layout_above="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"/>


    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:inputType="textPassword"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.AppCompat.Body1"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
            android:id="@+id/buat_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_buat_akun"
            android:textColor="@android:color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/btn_login"/>

    <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buat_akun"
            android:layout_below="@id/buat_akun"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"/>


</RelativeLayout>