<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.RegisterActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/holo_blue_light">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/fcm"
            android:layout_marginBottom="16dp"/>


    <EditText
            android:id="@+id/username_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@android:color/white"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.AppCompat.Body1"/>

    <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>